--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2024"
 image = "0.25.6"
 num_enum = "0.7.4"
 byteorder = "1.5.0"
+directories = "6.0.0"
 jpeg-decoder = "0.3.2"
 walkdir = "2.5.0"
 clap = { version = "4.5.45", features = ["derive"] }
@@ -16,6 +17,8 @@ rfd = "0.15.4"
 arboard = "3.6.1"
 egui = "0.32.1"
 eframe = { version = "0.32.1", features = ["wgpu"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.143"
 
 [[bin]]
 name = "blp_rs"
