--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ clap = { version = "4.5.45", features = ["derive"] }
 rfd = "0.15.4"
 arboard = "3.6.1"
 egui = "0.32.1"
+mozjpeg = "0.10.13"
 eframe = { version = "0.32.1", features = ["wgpu"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
