--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,6 @@ byteorder = "1.5.0"
 directories = "6.0.0"
 jpeg-decoder = "0.3.2"
 walkdir = "2.5.0"
-
 clap = { version = "4.5.47", features = ["derive"] }
 rfd = "0.15.4"
 arboard = "3.6.1"
@@ -49,3 +48,7 @@ icon = [
 image = "0.25.8"
 ico = "0.4.0"
 icns = "0.3.1"   # https://crates.io/crates/icns
+
+[target.'cfg(target_os = "macos")'.dependencies]
+cocoa = "0.26.1"
+objc = "0.2"
