--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ rfd = "0.15.4"
 arboard = "3.6.1"
 egui = "0.32.2"
 mozjpeg = "0.10.13"
-eframe = { version = "0.32.2", features = ["wgpu"] }
+eframe = { version = "0.32.2", features = ["wgpu", "persistence"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 
