--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ mozjpeg = "0.10.13"
 eframe = { version = "0.32.2", features = ["wgpu", "persistence"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
+normpath = "1.4.0"
 
 [[bin]]
 name = "blp_rs"
