--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,20 @@ byteorder = "1.5.0"
 directories = "6.0.0"
 jpeg-decoder = "0.3.2"
 walkdir = "2.5.0"
+confy = "1.0.0"
 clap = { version = "4.5.47", features = ["derive"] }
 rfd = "0.15.4"
 arboard = "3.6.1"
 mozjpeg = "0.10.13"
 eframe = { version = "0.32.2", features = ["wgpu", "persistence"] }
 serde = { version = "1.0.219", features = ["derive"] }
+include_dir = "0.7.4"
 serde_json = "1.0.143"
 normpath = "1.4.0"
+fluent-templates = "0.13.1"
+unic-langid = "0.9.6"
+once_cell = "1.21.3"
+sys-locale = "0.3.2"
 
 [[bin]]
 name = "blp_rs"
