--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ fluent-templates = "0.13.1"
 unic-langid = "0.9.6"
 once_cell = "1.21.3"
 sys-locale = "0.3.2"
+chrono = "0.4.42"
 
 [[bin]]
 name = "blp_rs"
