--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,10 @@ unic-langid = "0.9.6"
 once_cell = "1.21.3"
 sys-locale = "0.3.2"
 chrono = "0.4.42"
+tempfile = "3.22.0"
+dunce = { version = "1.0.5", optional = true }
+cfg-if = "1.0.3"
+
 
 [[bin]]
 name = "blp_rs"
