--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,17 +19,11 @@ arboard = "3.6.1"
 mozjpeg = "0.10.13"
 eframe = { version = "0.32.3", features = ["wgpu", "persistence"] }
 serde = { version = "1.0.223", features = ["derive"] }
-include_dir = "0.7.4"
-serde_json = "1.0.145"
 normpath = "1.4.0"
 fluent-templates = "0.13.1"
-unic-langid = "0.9.6"
-once_cell = "1.21.3"
 sys-locale = "0.3.2"
-chrono = "0.4.42"
 tempfile = "3.22.0"
-dunce = { version = "1.0.5", optional = true }
-cfg-if = "1.0.3"
+dunce = { version = "1.0.5" }
 
 
 [[bin]]
