--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ mozjpeg = "0.10.13"
 eframe = { version = "0.32.3", features = ["wgpu", "persistence"] }
 serde = { version = "1.0.223", features = ["derive"] }
 normpath = "1.4.0"
+path-absolutize = "3.1.1"
 fluent-templates = "0.13.1"
 sys-locale = "0.3.2"
 tempfile = "3.22.0"
