--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ fluent-templates = "0.13.1"
 sys-locale = "0.3.2"
 tempfile = "3.22.0"
 dunce = { version = "1.0.5" }
-
+brotli-decompressor = "5.0.0"
 
 [[bin]]
 name = "blp_rs"
@@ -51,6 +51,7 @@ icon = [
 ]
 
 [build-dependencies]
+brotli = "8.0.2"
 image = "0.25.8"
 ico = "0.4.0"
 icns = "0.3.1"   # https://crates.io/crates/icns
