--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ clap = { version = "4.5.47", features = ["derive"] }
 rfd = "0.15.4"
 arboard = "3.6.1"
 mozjpeg = "0.10.13"
+mozjpeg-sys = "2.2.3"
 eframe = { version = "0.32.3", features = ["wgpu", "persistence"] }
 serde = { version = "1.0.223", features = ["derive"] }
 normpath = "1.4.0"
@@ -28,7 +29,7 @@ dunce = { version = "1.0.5" }
 brotli-decompressor = "5.0.0"
 sha1 = "0.11.0-rc.2"
 hex = "0.4.3"
-img-parts = "0.4.0"
+libc = "0.2.175"
 
 [[bin]]
 name = "blp_rs"
