--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,12 @@ directories = "6.0.0"
 jpeg-decoder = "0.3.2"
 walkdir = "2.5.0"
 confy = "1.0.0"
-clap = { version = "4.5.47", features = ["derive"] }
+clap = { version = "4.5.48", features = ["derive"] }
 rfd = "0.15.4"
 arboard = "3.6.1"
-mozjpeg = "0.10.13"
-mozjpeg-sys = "2.2.3"
+turbojpeg = "1.3.3"
 eframe = { version = "0.32.3", features = ["wgpu", "persistence"] }
-serde = { version = "1.0.223", features = ["derive"] }
+serde = { version = "1.0.226", features = ["derive"] }
 normpath = "1.4.0"
 path-absolutize = "3.1.1"
 fluent-templates = "0.13.1"
@@ -29,7 +28,6 @@ dunce = { version = "1.0.5" }
 brotli-decompressor = "5.0.0"
 sha1 = "0.11.0-rc.2"
 hex = "0.4.3"
-libc = "0.2.175"
 
 [[bin]]
 name = "blp_rs"
@@ -71,4 +69,5 @@ codegen-units = 1
 opt-level = "z"
 strip = "symbols"
 panic = "abort"   # опционально; если мешает mozjpeg, закомментируй или ставь "unwind"
-
+[features]
+default = []
