--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,32 +6,38 @@ repository = "https://github.com/WarRaft/blp-rs"
 edition = "2024"
 
 [dependencies]
-image = "0.25.8"
-num_enum = "0.7.4"
-byteorder = "1.5.0"
-directories = "6.0.0"
-jpeg-decoder = "0.3.2"
-walkdir = "2.5.0"
-confy = "1.0.0"
-clap = { version = "4.5.48", features = ["derive"] }
-rfd = "0.15.4"
-arboard = "3.6.1"
-turbojpeg = "1.3.3"
-eframe = { version = "0.32.3", features = ["wgpu", "persistence"] }
-serde = { version = "1.0.226", features = ["derive"] }
-normpath = "1.4.0"
-path-absolutize = "3.1.1"
-fluent-templates = "0.13.1"
-sys-locale = "0.3.2"
-tempfile = "3.22.0"
-dunce = { version = "1.0.5" }
+arboard = { version = "3.6.1", optional = true }
 brotli-decompressor = "5.0.0"
-sha1 = "0.11.0-rc.2"
+byteorder = "1.5.0"
+clap = { version = "4.5.48", features = ["derive"], optional = true }
+confy = { version = "1.0.0", optional = true }
+directories = { version = "6.0.0", optional = true }
+dunce = { version = "1.0.5" }
+eframe = { version = "0.32.3", features = ["wgpu", "persistence"], optional = true }
+fluent-templates = "0.13.1"
 hex = "0.4.3"
+image = "0.25.8"
+jpeg-decoder = "0.3.2"
+normpath = "1.4.0"
+num_enum = "0.7.4"
+path-absolutize = "3.1.1"
+rfd = { version = "0.15.4", optional = true }
+serde = { version = "1.0.226", features = ["derive"], optional = true }
+sha1 = "0.11.0-rc.2"
+sys-locale = { version = "0.3.2", optional = true }
+tempfile = "3.22.0"
+turbojpeg = "1.3.3"
+walkdir = "2.5.0"
 
 [[bin]]
-name = "blp_rs"
-path = "main.rs"
+name = "blp-rs-cli"
+path = "src/bin/blp-rs-cli.rs"
+required-features = ["cli"]
+
+[[bin]]
+name = "blp-rs-ui"
+path = "src/bin/blp-rs-ui.rs"
+required-features = ["cli", "ui"]
 
 [lib]
 name = "blp_rs"
@@ -71,3 +77,13 @@ strip = "symbols"
 panic = "abort"   # опционально; если мешает mozjpeg, закомментируй или ставь "unwind"
 [features]
 default = []
+cli = ["dep:clap"]
+ui = [
+    "dep:arboard",
+    "dep:confy",
+    "dep:directories",
+    "dep:eframe",
+    "dep:rfd",
+    "dep:serde",
+    "dep:sys-locale",
+]
