--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ clap = { version = "4.5.48", features = ["derive"], optional = true }
 confy = { version = "1.0.0", optional = true }
 directories = { version = "6.0.0", optional = true }
 dunce = { version = "1.0.5" }
-eframe = { version = "0.32.3", features = ["wgpu", "persistence"], optional = true }
+eframe = { version = "0.32.3", features = ["glow", "persistence"], optional = true }
 fluent-templates = "0.13.1"
 hex = "0.4.3"
 image = "0.25.8"
@@ -40,7 +40,6 @@ rfd = { version = "0.15.4", optional = true }
 serde = { version = "1.0.226", features = ["derive"], optional = true }
 sha1 = "0.11.0-rc.2"
 sys-locale = { version = "0.3.2", optional = true }
-tempfile = "3.22.0"
 turbojpeg = "1.3.3"
 walkdir = "2.5.0"
 
@@ -78,6 +77,8 @@ brotli = "8.0.2"
 image = "0.25.8"
 ico = "0.4.0"
 icns = "0.3.1"   # https://crates.io/crates/icns
+
+[target.'cfg(windows)'.build-dependencies]
 winresource = "0.1.23"
 
 [target.'cfg(target_os = "macos")'.dependencies]
