--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ clap = { version = "4.5.48", features = ["derive"], optional = true }
 confy = { version = "1.0.0", optional = true }
 directories = { version = "6.0.0", optional = true }
 dunce = { version = "1.0.5" }
-eframe = { version = "0.32.3", features = ["glow", "persistence"], optional = true }
+eframe = { version = "0.32.3", features = ["wgpu", "persistence"], optional = true }
 fluent-templates = "0.13.1"
 hex = "0.4.3"
 image = "0.25.8"
