--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ exclude = [
 
 [dependencies]
 arboard = { version = "3.6.1", optional = true }
-brotli-decompressor = "5.0.0"
 byteorder = "1.5.0"
 clap = { version = "4.5.48", features = ["derive"], optional = true }
 confy = { version = "1.0.0", optional = true }
@@ -73,17 +72,18 @@ icon = [
 ]
 
 [build-dependencies]
-brotli = "8.0.2"
 image = "0.25.8"
-ico = "0.4.0"
-icns = "0.3.1"   # https://crates.io/crates/icns
 
-[target.'cfg(windows)'.build-dependencies]
+[target.'cfg(target_os = "windows")'.build-dependencies]
+ico = "0.4.0"
 winresource = "0.1.23"
 
 [target.'cfg(target_os = "macos")'.dependencies]
-cocoa = "0.26.1"
 objc = "0.2.7"
+cocoa = "0.26.1"
+
+[target.'cfg(target_os = "macos")'.build-dependencies]
+icns = "0.3.1"
 
 [profile.release]
 lto = "thin"        # LTO включено только для финальной сборки
